# coalbot

./: .gitignore  README.md  config.example.json  pyproject.toml
src/coalbot/: __init__.py  __main__.py  bot.py  config.py
